Icon credits wording tweak.

--- a/pressgang/templates/pressgang/core/base.html
+++ b/pressgang/templates/pressgang/core/base.html
@@ -86,8 +86,8 @@
 				<li class="credit app"><a href="http://languages.oberlin.edu/cilc/projects/pressgang/">{% trans "PressGang" %}</a> {% trans "WordPress installation manager" %}</li>
 				<li class="credit creator">{% trans "Created by" %} <a href="http://languages.oberlin.edu">{% trans "the Cooper International Learning Center" %}</a></li>
 				<li class="credit icons">
-					{% blocktrans with "<a href='http://www.famfamfam.com/lab/icons/silk/'>Silk</a>" as icons %}
-						Icons taken from the {{ icons }} icon set
+					{% blocktrans with "<a href='http://www.famfamfam.com/lab/icons/silk/'>Silk</a>" as set_name %}
+						Icons from the {{ set_name }} icon set
 					{% endblocktrans %}
 				</li>
 			</ul>
