--- a/pressgang/templates/pressgang/core/base.html
+++ b/pressgang/templates/pressgang/core/base.html
@@ -9,6 +9,8 @@
 	<meta http-equiv="Content-Language" content="en-us" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+	<link rel="icon" href="{{ MEDIA_URL }}pressgang/images/favicon.png" type="image/png" />
+
 	{% block all_css %}
 
 		<link type="text/css" rel="stylesheet" media="all" href="{{ MEDIA_URL }}pressgang/css/pressgang.css" />
