--- a/pressgang/templates/pressgang/install/options.html
+++ b/pressgang/templates/pressgang/install/options.html
@@ -30,6 +30,7 @@
 			{% form_field install_form.password %}
 			{% form_field install_form.password_verify %}
 			{% form_field install_form.installer %}
+			{% form_field install_form.is_public %}
 		</fieldset>
 
 		<fieldset id="user-fields">
