--- a/pressgang/media/pressgang/css/pressgang.css
+++ b/pressgang/media/pressgang/css/pressgang.css
@@ -351,6 +351,19 @@ body.login #login-form .data-entry {
   padding-bottom: 1.5em; }
   .action-log .action-completed .blog-link {
     font-weight: bold; }
+  .action-log .action-completed .next-steps {
+    border-top: 2px solid #efefec;
+    margin-top: 0.75em;
+    padding-top: 0.75em; }
+    .action-log .action-completed .next-steps .title {
+      display: inline;
+      font-size: 1em;
+      line-height: 1.5em; }
+    .action-log .action-completed .next-steps .other-actions {
+      display: inline; }
+      .action-log .action-completed .next-steps .other-actions .action {
+        display: inline;
+        margin-left: 1.5em; }
 
 /* Blog Addition */
 .add-blogs-options #add-blogs-form .options-fields {
